@@ -18,10 +18,9 @@ package io.gravitee.am.plugins.reporter.plugin;
 import io.gravitee.am.plugins.reporter.core.ReporterDefinition;
 import io.gravitee.am.plugins.reporter.core.ReporterPluginManager;
 import io.gravitee.am.reporter.api.Reporter;
+import io.gravitee.plugin.core.api.AbstractPluginHandler;
 import io.gravitee.plugin.core.api.Plugin;
 import io.gravitee.plugin.core.api.PluginClassLoaderFactory;
-import io.gravitee.plugin.core.api.PluginHandler;
-import io.gravitee.plugin.core.api.PluginType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,7 +30,7 @@ import org.springframework.util.Assert;
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
  * @author GraviteeSource Team
  */
-public class ReporterPluginHandler implements PluginHandler {
+public class ReporterPluginHandler extends AbstractPluginHandler {
 
     private static final String AM_REPORTER_PLUGIN_TYPE = "am-reporter";
     private final Logger LOGGER = LoggerFactory.getLogger(ReporterPluginHandler.class);
@@ -44,31 +43,37 @@ public class ReporterPluginHandler implements PluginHandler {
 
     @Override
     public boolean canHandle(Plugin plugin) {
-        return AM_REPORTER_PLUGIN_TYPE.equalsIgnoreCase(plugin.type());
+        return type().equalsIgnoreCase(plugin.type());
     }
 
     @Override
-    public void handle(Plugin plugin) {
+    protected void handle(Plugin plugin, Class<?> pluginClass) {
         try {
-            ClassLoader classloader = pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
-
-            final Class<?> reporterClass = classloader.loadClass(plugin.clazz());
             LOGGER.info("Register a new reporter plugin: {} [{}]", plugin.id(), plugin.clazz());
 
-            Assert.isAssignable(Reporter.class, reporterClass);
+            Assert.isAssignable(Reporter.class, pluginClass);
 
-            Reporter reporter = createInstance((Class<Reporter>) reporterClass);
+            var reporter = createInstance((Class<Reporter>) pluginClass);
 
             reporterPluginManager.register(new ReporterDefinition(reporter, plugin));
         } catch (Exception iae) {
             LOGGER.error("Unexpected error while create reporter instance", iae);
         }
+    }
 
+    @Override
+    protected String type() {
+        return AM_REPORTER_PLUGIN_TYPE;
+    }
+
+    @Override
+    protected ClassLoader getClassLoader(Plugin plugin) {
+        return pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
     }
 
     private <T> T createInstance(Class<T> clazz) throws Exception {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (InstantiationException | IllegalAccessException ex) {
             LOGGER.error("Unable to instantiate class: {}", clazz.getName(), ex);
             throw ex;
